--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # See https://docs.github.com/get-started/getting-started-with-git/ignoring-files for more about ignoring files.
 
+/src/environments/environment.ts
+/src/assets/jakub_pruszydlo_cv.pdf
+
 # Compiled output
 /dist
 /tmp
